# bhopthebackrooms

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/bhop/: config.h  movement.h
native/: bhop_mod.cpp
package/bhop/: bhop.ini
src/: bhop_config.cpp  bhop_movement.cpp  config.cpp  config.h  hooks.cpp  hooks.h  input.cpp  interaction.cpp  ladder.cpp  mod.cpp  mod.h  movement.cpp  player.cpp  runtime.cpp  water.cpp
src/util/: process.cpp  process.h  scanner.cpp  scanner.h
tests/: movement_tests.cpp
